--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -930,68 +930,66 @@
    "source": [
     "# Descrição do Algoritmo (BLAST)\n",
     "\n",
-    "**BLAST (Basic Local Alignment Search Tool)** é um algoritmo amplamente utilizado em bioinformática para encontrar regiões de similaridade local entre sequências biológicas, como DNA, RNA ou proteínas. Ele utiliza uma abordagem heurística para identificar rapidamente os alinhamentos locais mais significativos entre uma sequência de consulta (query) e uma base de dados (database). A heurística do BLAST reduz o tempo de execução ao evitar o alinhamento completo, analisando apenas as subsequências mais promissoras.\n",
+    "**BLAST (Basic Local Alignment Search Tool)** é um algoritmo amplamente utilizado em bioinformática para encontrar regiões de similaridade local entre sequências biológicas, como DNA, RNA ou proteínas. Ele utiliza uma abordagem heurística para identificar rapidamente os alinhamentos locais mais significativos entre uma sequência de consulta (query) e uma base de dados (database). A natureza heurística do BLAST reduz o tempo de execução ao evitar o alinhamento completo, analisando apenas as subsequências mais promissoras.\n",
+    "\n",
+    "Nesta implementação específica, a busca é realizada em uma única sequência em vez de uma base de dados completa. Isso simplifica o algoritmo, mas mantém o objetivo de encontrar alinhamentos locais significativos.\n",
     "\n",
     "### Etapas principais do BLAST:\n",
-    "1. **Criação de palavras**: A sequência de consulta é dividida em subsequências de tamanho fixo (`w`), chamadas palavras.\n",
-    "2. **Mapeamento**: As palavras são comparadas com as subsequências na base de dados para encontrar correspondências exatas.\n",
-    "3. **Identificação de hits**: Quando uma palavra corresponde a uma subsequência no banco de dados, ela é marcada como um hit inicial.\n",
-    "4. **Extensão de hits**: Os hits iniciais são estendidos em ambas as direções para verificar se formam alinhamentos mais longos e significativos.\n",
-    "5. **Pontuação e classificação**: Os alinhamentos são pontuados com base em um sistema de substituição/match e apresentados ao usuário, ordenados pelo valor de similaridade.\n",
+    "1. **Criação de subsequências**: A sequência de consulta é dividida em subsequências de tamanho fixo (`w`), utilizando o conceito de **sliding windows** (janelas deslizantes).\n",
+    "2. **Mapeamento**: As subsequências geradas são comparadas com as subsequências na sequência alvo para encontrar correspondências exatas.\n",
+    "3. **Identificação de hits**: Quando uma subsequência da query corresponde a uma subsequência na sequência alvo, ela é marcada como um hit.\n",
+    "4. **Extensão de hits**: Os hits iniciais são estendidos em ambas as direções para verificar se formam alinhamentos mais longos e significativos. O número de matches deve ser de pelo menos metade do tamanho da extensão.\n",
+    "5. **Pontuação e classificação**: Apenas a extensão do hit mais significativo (maior número de matches e menor extensão em caso de empate) é devolvida.\n",
+    "\n",
     "---\n",
     "\n",
     "## Projeto de Alto Nível (BLAST)\n",
     "\n",
-    "\n",
     "### 1. **Entrada e Saída:**\n",
     "- **Entrada:**\n",
     "  - Sequência de consulta (query).\n",
-    "  - Base de dados de sequências.\n",
-    "  - Tamanho da palavra (`w`) e outros parâmetros opcionais (e.g., score threshold).\n",
+    "  - Sequência alvo onde será realizada a busca.\n",
+    "  - Tamanho da palavra (`w`).\n",
     "- **Saída:**\n",
-    "  - Lista de alinhamentos locais mais significativos com suas respectivas pontuações.\n",
+    "  - Devolve a extensão de maior score.\n",
     "\n",
     "### 2. **Componentes Principais:**\n",
-    "- **Query Mapping**: Dividir a sequência de consulta em subsequências (`w`) e mapear suas ocorrências.\n",
-    "- **Hit Detection**: Identificar subsequências correspondentes na base de dados.\n",
-    "- **Hit Extension**: Expandir hits em ambas as direções para formar alinhamentos locais mais longos.\n",
-    "- **Scoring**: Calcular a pontuação dos alinhamentos usando uma matriz de substituição (e.g., BLOSUM para proteínas ou match/mismatch para DNA).\n",
-    "- **Filtragem e Classificação**: Filtrar alinhamentos com pontuações baixas e ordenar os resultados.\n",
+    "- **Query Mapping**: Dividir a sequência de consulta em subsequências (`w`) e guardar as suas posições.\n",
+    "- **Hit Detection**: Identificar subsequências correspondentes na sequência alvo.\n",
+    "- **Hit Extension**: Expandir hits em ambas as direções para formar alinhamentos locais mais longos, considerando o critério de pelo menos metade do tamanho como matches.\n",
+    "- **Filtragem e Classificação**: Ordenar alinhamentos com base no número de matches e tamanho.\n",
     "\n",
     "### 3. **Fluxo de Dados:**\n",
-    "Entrada da query → Criação de palavras → Mapeamento na base de dados → Identificação de hits → Extensão de hits → Pontuação → Ordenação e saída.\n",
+    "Entrada da query → Criação de janelas deslizantes → Mapeamento na sequência alvo → Identificação de hits → Extensão de hits → Devolve melhor hit.\n",
     "\n",
     "---\n",
-    "\n",
     "\n",
     "## Projeto de Baixo Nível (BLAST)\n",
     "\n",
     "### 1. **Query Mapping**:\n",
-    "- **Descrição**: Dividir a query em palavras de tamanho `w` e criar um dicionário com as subsequências como chaves e seus índices como valores.\n",
-    "- **Estruturas de Dados**: `defaultdict` para armazenar as palavras e seus índices.\n",
+    "- **Descrição**: Dividir a query em subsequências de tamanho `w` utilizando janelas deslizantes (**sliding windows**) e criar um dicionário com as subsequências como chaves e índices como valores.\n",
+    "- **Estruturas de Dados**: `defaultdict` para armazenar as subsequências e índices.\n",
     "\n",
     "### 2. **Hit Detection**:\n",
-    "- **Descrição**: Para cada palavra da query, buscar todas as ocorrências correspondentes na base de dados.\n",
+    "- **Descrição**: Para cada subsequência da query, procurar todas as ocorrências correspondentes na sequência alvo.\n",
     "- **Algoritmo**:\n",
-    "  - Iterar sobre todas as subsequências da base de dados.\n",
-    "  - Comparar com as palavras geradas pela query.\n",
+    "  - Iterar sobre todas as subsequências da sequência alvo e armazenar as que são iguais à subsequência da query.\n",
     "\n",
     "### 3. **Hit Extension**:\n",
-    "- **Descrição**: Expandir os hits para verificar o alinhamento máximo em ambas as direções, respeitando os critérios de pontuação mínima.\n",
+    "- **Descrição**: Expandir os hits para verificar o alinhamento máximo em ambas as direções. O número de matches deve ser de pelo menos metade do tamanho da extensão.\n",
     "- **Algoritmo**:\n",
-    "  - Iniciar no índice do hit.\n",
-    "  - Expandir para a esquerda e direita enquanto o número de matches for maior ou igual a metade do tamanho da extensão.\n",
+    "  - Iniciar no índice do inicio e final do hit.\n",
+    "  - Expandir para a esquerda e direita enquanto o critério de matches for mantido.\n",
+    "  - Retornar o índice inicial, índice final, tamanho e número de matches do alinhamento estendido.\n",
     "\n",
-    "### 4. **Scoring**:\n",
-    "- **Descrição**: Avaliar cada alinhamento usando:\n",
-    "  - Pontuação por match/mismatch (e.g., +1 para match, -1 para mismatch).\n",
-    "  - Penalidade para gaps, se necessário.\n",
-    "\n",
-    "### 5. **Filtragem e Classificação**:\n",
-    "- **Descrição**: Ordenar os alinhamentos pelo número de matches ou pontuação, aplicando critérios adicionais (e.g., alinhamento mais curto em caso de empate).\n",
+    "### 4. **Filtragem e Classificação**:\n",
+    "- **Descrição**: Determinar a melhor extensão de hit considerando:\n",
+    "  - Maior número de matches.\n",
+    "  - Em caso de empate, menor tamanho.\n",
+    "  - Priorizar o primeiro hit encontrado em caso de novo empate.\n",
     "- **Algoritmo**:\n",
-    "  - Filtrar alinhamentos com score abaixo de um limiar.\n",
-    "  - Ordenar pela pontuação, com desempate pelo comprimento.\n",
+    "  - Iterar sobre todas as extensões de hits.\n",
+    "  - Comparar a pontuação de cada extensão e selecionar o melhor alinhamento.\n",
     "\n",
     "---\n",
     "\n",
@@ -1000,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,31 +1007,50 @@
     "\n",
     "def query_map(seq, window_size):\n",
     "    \"\"\"\n",
-    "    Returns a dictionary of all key/value pairs where\n",
-    "        key is a substring of size window_size\n",
-    "        value is a list of occurrences (offsets)\n",
-    "    \"\"\"\n",
+    "    Cria um dicionário onde as chaves são subsequências de tamanho fixo (window_size)\n",
+    "    e os valores são listas dos índices de ocorrência dessas subsequências na sequência.\n",
     "\n",
+    "    Args:\n",
+    "        seq (str): Sequência de entrada.\n",
+    "        window_size (int): Tamanho da janela deslizante.\n",
+    "\n",
+    "    Returns:\n",
+    "        defaultdict: Dicionário com subsequências como chaves e listas de índices como valores.\n",
+    "    \"\"\"\n",
     "    res = defaultdict(list)\n",
     "    size = len(seq)\n",
     "\n",
     "    for position in range(size - window_size + 1):\n",
-    "\n",
-    "        subseq = seq[position : position + window_size]\n",
+    "        subseq = seq[position: position + window_size]\n",
     "        res[subseq].append(position)\n",
-    "\n",
-    "\n",
     "\n",
     "    return res\n",
     "\n",
+    "\n",
     "def get_all_positions(subseq, seq):\n",
-    "    return [P for P in range(len(seq) - len(subseq) + 1) if seq[P : P + len(subseq)] == subseq]\n",
+    "    \"\"\"\n",
+    "    Encontra todas as posições onde uma subsequência aparece numa sequência alvo\n",
+    "\n",
+    "    Args:\n",
+    "        subseq (str): Subsequência a ser procura.\n",
+    "        seq (str): Sequência alvo.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: Lista de índices onde ocorre a correspondência.\n",
+    "    \"\"\"\n",
+    "    return [P for P in range(len(seq) - len(subseq) + 1) if seq[P: P + len(subseq)] == subseq]\n",
+    "\n",
     "        \n",
     "def hits(query_map, seq):\n",
     "    \"\"\"\n",
-    "        for all keys Q in qm\n",
-    "        for all positions in seq where Q exists\n",
-    "        add the tuple of corresponding positions\n",
+    "    Encontra correspondências entre subsequências mapeadas e a sequência alvo.\n",
+    "\n",
+    "    Args:\n",
+    "        query_map (dict): Dicionário gerado pela função query_map.\n",
+    "        seq (str): Sequência alvo.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: Lista de tuplos com os indices das posições de correspondência na query e na sequência alvo.\n",
     "    \"\"\"\n",
     "    res = []\n",
     "    for subseq, query_positions in query_map.items():\n",
@@ -1047,16 +1064,16 @@
     "\n",
     "def extend_hit(query, seq, hit, window_size):\n",
     "    \"\"\"\n",
-    "    Extends a hit in both directions based on matching criteria.\n",
+    "    Estende um hit em ambas as direções com base no critério de correspondência.\n",
     "\n",
     "    Args:\n",
-    "        query: The query sequence.\n",
-    "        seq: The sequence from the database.\n",
-    "        hit: Tuple of initial offsets in query and seq.\n",
-    "        window_size: Size of the initial hit window.\n",
+    "        query (str): Sequência de consulta.\n",
+    "        seq (str): Sequência alvo.\n",
+    "        hit (tuple): Tuplo com as posições iniciais na query e na sequência.\n",
+    "        window_size (int): Tamanho da janela inicial.\n",
     "\n",
     "    Returns:\n",
-    "        Tuple with (start_query, start_seq, length, num_matches).\n",
+    "        tuple: Índice inicial, tamanho da extensão e número de correspondências.\n",
     "    \"\"\"\n",
     "    start_query, start_seq = hit\n",
     "\n",
@@ -1094,15 +1111,15 @@
     "\n",
     "def best_hit(query, seq, window_size):\n",
     "    \"\"\"\n",
-    "    Finds the best hit with the highest score. In case of a tie, the shorter hit appearing first is returned.\n",
+    "    Devolve o melhor hit baseado na maior pontuação de correspondências.\n",
     "\n",
     "    Args:\n",
-    "        query: The query sequence.\n",
-    "        seq: The sequence from the database.\n",
-    "        window_size: Size of the initial hit window.\n",
+    "        query (str): Sequência de consulta.\n",
+    "        seq (str): Sequência alvo.\n",
+    "        window_size (int): Tamanho da janela inicial.\n",
     "\n",
     "    Returns:\n",
-    "        Tuple with (start_query, start_seq, length, num_matches) for the best hit.\n",
+    "        tuple: Extensão do melhor hit com indices do hit, tamanho e número de matches.\n",
     "    \"\"\"\n",
     "    qm = query_map(query, window_size)\n",
     "    hit_list = hits(qm, seq)\n",
@@ -1127,26 +1144,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test_best_hit (__main__.TestBLASTFunctions.test_best_hit) ... c:\\Users\\arafa\\miniconda3\\envs\\localhub\\Lib\\site-packages\\jupyter_client\\session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
-      "  return datetime.utcnow().replace(tzinfo=utc)\n",
-      "ok\n",
+      "test_best_hit (__main__.TestBLASTFunctions.test_best_hit) ... ok\n",
       "test_extend_hit (__main__.TestBLASTFunctions.test_extend_hit) ... ok\n",
       "test_get_all_positions (__main__.TestBLASTFunctions.test_get_all_positions) ... ok\n",
       "test_hits (__main__.TestBLASTFunctions.test_hits) ... ok\n",
       "test_query_map (__main__.TestBLASTFunctions.test_query_map) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 5 tests in 0.004s\n",
+      "Ran 5 tests in 0.005s\n",
       "\n",
       "OK\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=5 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1196,9 +1221,8 @@
     "        result = best_hit(self.query, self.seq, self.window_size)\n",
     "        self.assertEqual(result, expected, f\"best_hit failed for input: {self.query}, {self.seq}, {self.window_size}\")\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "\n",
-    "    unittest.main(argv=['first-arg-is-ignored'], exit=False, verbosity=2)\n"
+    "suite = unittest.TestLoader().loadTestsFromTestCase(TestBLASTFunctions)\n",
+    "unittest.TextTestRunner( verbosity=2 ).run( suite )"
    ]
   },
   {
