--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -1548,8 +1548,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este algoritmo realiza o agrupamento hierárquico de sequências de DNA, utilizando a distância de Levenstein (lecionada em aula) para calcular a similaridade entre as sequências. O objetivo é gerar um dendrograma que ilustra como as sequências são agrupadas com base nas suas distâncias.\n",
-    "São usados três pacotes principais. O numpy (np) é utilizado para criar e manipular a matriz de distâncias entre as sequências de DNA, permitindo o cálculo eficiente de distâncias entre os pares de sequências. O scipy.cluster.hierarchy (sch) contém a função linkage, que executa o agrupamento hierárquico com base nas distâncias calculadas. Finalmente, o matplotlib.pyplot (plt) é utilizado para exibir o dendrograma resultante, permitindo uma visualização clara do processo de agrupamento. "
+    "# Descrição do Algoritmo (Árvore Filogenética)\n",
+    "\n",
+    "**Árvore Filogenética**  O algoritmo de árvores filogéticas descrito realiza a análise de similaridade entre sequências de DNA com base na distância de Levenstein, originando um dendrograma que visualiza os agrupamentos formados. O algoritmo combina o cálculo de distâncias entre sequências, a construção de uma matriz de distâncias e a aplicação de técnicas de agrupamento hierárquico para representar as relações entre as sequências de forma gráfica.\n",
+    "\n",
+    "\n",
+    "### Etapas principais:\n",
+    "1. **Cálculo de distâncias**: A distância entre pares de sequências é calculada utilizando o algoritmo de Levenstein, que determina o número mínimo de operações (inserções, deleções e substituições) necessárias para transformar uma sequência noutra.\n",
+    "2. **Matriz de Distâncias**: A função cria uma matriz simétrica que armazena as distâncias entre todas as combinações de sequências na lista fornecida.\n",
+    "3. **Agrupamento Hierárquico e Visualização**: O agrupamento hierárquico é realizado utilizando a função linkage da biblioteca scipy.cluster.hierarchy (sch), que calcula a matriz de ligação baseada nas distâncias entre as sequências. O método de agrupamento utilizado é o \"average\", que calcula a distância média entre clusters. Após calcular a matriz de distâncias com a função matriz_distancias, ela é convertida para o formato compacto usando squareform de scipy.cluster.hierarchy.distance, transformando a matriz de distâncias num vetor compacto. Em seguida, a função linkage é aplicada para calcular a matriz de ligação, essencial para o agrupamento hierárquico. Com a matriz de ligação, o dendrograma é gerado utilizando a função dendrogram da mesma biblioteca. Por fim, a visualização do dendrograma é exibida com a função show() da biblioteca matplotlib, permitindo a interpretação visual dos agrupamentos formados.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Projeto de Alto Nível (BLAST)\n",
+    "\n",
+    "### 1. **Entrada e Saída:**\n",
+    "- **Entrada:**\n",
+    "  - Lista de sequências de DNA.\n",
+    "- **Saída:**\n",
+    "  - Dendograma que representa os agrupamentos hierárquicos das sequências.\n",
+    "\n",
+    "### 2. **Componentes Principais:**\n",
+    "- **Cálculo de Distâncias (Função distancia)**: Implementação do algoritmo de Levenstein para determinar a distância entre duas sequências.\n",
+    "- **Matriz de Distâncias (Função matriz_distancias)**: Criação de uma matriz simétrica que armazena as distâncias de todas as combinações de sequências\n",
+    "- **Agrupamento Hierárquico**: Utilização do método de agrupamento \"average\" para calcular a matriz de ligação.\n",
+    "- **Visualização com Dendrograma**: Produção e exibição o dendrograma usando a biblioteca matplotlib.\n",
+    "\n",
+    "### 3. **Fluxo de Dados:**\n",
+    "Entrada das sequências → Cálculo da matriz de distâncias → Aplicação do agrupamento hierárquico → Produção do dendrograma → Visualização do dendrograma.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Projeto de Baixo Nível (BLAST)\n",
+    "\n",
+    "### 1. **Cálculo de Distâncias (Função distancia)**:\n",
+    "- **Descrição**: Implementa o algoritmo de Levenstein para calcular a distância mínima necessária para transformar uma sequência noutra, considerando operações de inserção, deleção e substituição.\n",
+    "- **Algoritmo**: \n",
+    "  - Inicializa uma matriz de tamanho (len(s1)+1) x (len(s2)+1) com valores iniciais correspondentes ao custo cumulativo de inserções e deleções;\n",
+    "  - Preenche a matriz iterativamente, calculando o custo mínimo para cada posição com base nas operações possíveis;\n",
+    "  - O valor na posição inferior direita da matriz é a distância final.\n",
+    "\n",
+    "### 2. **Matriz de Distâncias (Função matriz_distancias)**:\n",
+    "- **Descrição**: Cria uma matriz simétrica onde cada célula [i][j] representa a distância de Levenstein entre as sequências i e j.\n",
+    "- **Algoritmo**:\n",
+    "  - Inicializa uma matriz de zeros de tamanho n x n, onde n é o número de sequências;\n",
+    "  - Itera sobre todos os pares de sequências e calcula a distância usando a função distancia;\n",
+    "  - Preenche a matriz simetricamente, atribuindo os valores calculados às posições [i][j] e [j][i].\n",
+    "\n",
+    "### 3. **Agrupamento Hierárquico e Visualização**:\n",
+    "- **Descrição**: Realiza o agrupamento hierárquico com base na matriz de distâncias e gera um dendrograma para visualizar os agrupamentos.\n",
+    "- **Algoritmo**:\n",
+    "  - Converte a matriz de distâncias para um vetor compacto usando a função squareform do módulo scipy.cluster.hierarchy.\n",
+    "  - Aplica a função linkage ao vetor compacto com o método \"average\" para calcular a matriz de ligação.\n",
+    "  - Gera o dendrograma usando a função dendrogram e ajustar os rótulos e visualizações.\n",
+    "  - Mostra o dendrograma utilizando a função show() da biblioteca matplotlib.\n",
+    "  \n",
+    "---\n",
+    "\n",
+    "## Implementação"
    ]
   },
   {
@@ -1561,22 +1617,6 @@
     "import numpy as np\n",
     "import scipy.cluster.hierarchy as sch\n",
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. ___Cálculo de distâncias___\n",
-    "\n",
-    "A distância entre pares de sequências é calculada utilizando o algoritmo de Levenstein, que determina o número mínimo de operações (inserções, deleções e substituições) necessárias para transformar uma sequência noutra.\n",
-    "Função distancia: Calcula a distância de Levenstein entre duas sequências de DNA.\n",
-    "\n",
-    "        Função distancia(s1, s2):\n",
-    "        s1 e s2: Duas strings que representam as sequências de DNA.\n",
-    "\n",
-    "O algoritmo começa por criar uma matriz de tamanho (len(s1)+1) x (len(s2)+1). As bordas da matriz são preenchidas com os custos de inserções e deleções. A seguir, a matriz é preenchida iterativamente, calculando o custo mínimo de cada posição com base nas operações de substituição, inserção e deleção. O valor no canto inferior direito da matriz será a distância final entre as duas sequências.\n",
-    "        "
    ]
   },
   {
@@ -1604,21 +1644,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. ___Matriz de Distâncias___\n",
-    "\n",
-    "A função cria uma matriz simétrica que armazena as distâncias entre todas as combinações de sequências na lista fornecida.\n",
-    "Função matriz_distancias: Calcula a matriz de distâncias entre todas as sequências.\n",
-    "\n",
-    "        Função matriz_distancias(lista_seqs):\n",
-    "        lista_seqs: Lista de strings que representam as sequências de DNA.\n",
-    "\n",
-    "A função começa por iniciar uma matriz de zeros de tamanho n x n, onde n é o número de sequências. Para cada par de sequências, a função distancia é chamada para calcular a distância de Levenstein e preencher a matriz. Como a matriz é simétrica, a distância entre seq1 e seq2 é atribuída à posição (i, j) e também à posição (j, i)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1634,15 +1659,6 @@
     "        for j in range(i + 1, n):\n",
     "            dist_matriz[i][j] = dist_matriz[j][i] = distancia(lista_seqs[i], lista_seqs[j])\n",
     "    return dist_matriz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3. ___Agrupamento Hierárquico e Visualização___ :\n",
-    "\n",
-    "O agrupamento hierárquico é realizado utilizando a função linkage da biblioteca scipy.cluster.hierarchy (sch), que calcula a matriz de ligação baseada nas distâncias entre as sequências. O método de agrupamento utilizado é o \"average\", que calcula a distância média entre clusters. Após calcular a matriz de distâncias com a função matriz_distancias, ela é convertida para o formato compacto usando squareform de scipy.cluster.hierarchy.distance, transformando a matriz de distâncias num vetor compacto. Em seguida, a função linkage é aplicada para calcular a matriz de ligação, essencial para o agrupamento hierárquico. Com a matriz de ligação, o dendrograma é gerado utilizando a função dendrogram da mesma biblioteca. Este dendrograma é um gráfico que visualiza como as sequências foram agrupadas ao longo do processo. O eixo horizontal do gráfico exibe as sequências, enquanto o eixo vertical mostra as distâncias entre os grupos de sequências. Por fim, a visualização do dendrograma é exibida com a função show() da biblioteca matplotlib, permitindo a interpretação visual dos agrupamentos formados."
    ]
   },
   {
@@ -1736,7 +1752,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "localhub",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1750,7 +1766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
