--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -1550,7 +1550,8 @@
    "source": [
     "# Descrição do Algoritmo (Árvore Filogenética)\n",
     "\n",
-    "**Árvore Filogenética**  O algoritmo de árvores filogéticas descrito realiza a análise de similaridade entre sequências de DNA com base na distância de Levenstein, originando um dendrograma que visualiza os agrupamentos formados. O algoritmo combina o cálculo de distâncias entre sequências, a construção de uma matriz de distâncias e a aplicação de técnicas de agrupamento hierárquico para representar as relações entre as sequências de forma gráfica.\n",
+    "**Árvore Filogenética** \n",
+    " O algoritmo de árvores filogéticas descrito realiza a análise de similaridade entre sequências de DNA com base na distância de Levenstein, originando um dendrograma que visualiza os agrupamentos formados. O algoritmo combina o cálculo de distâncias entre sequências, a construção de uma matriz de distâncias e a aplicação de técnicas de agrupamento hierárquico para representar as relações entre as sequências de forma gráfica.\n",
     "\n",
     "\n",
     "### Etapas principais:\n",
@@ -1560,7 +1561,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Projeto de Alto Nível (BLAST)\n",
+    "## Projeto de Alto Nível\n",
     "\n",
     "### 1. **Entrada e Saída:**\n",
     "- **Entrada:**\n",
@@ -1579,7 +1580,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Projeto de Baixo Nível (BLAST)\n",
+    "## Projeto de Baixo Nível\n",
     "\n",
     "### 1. **Cálculo de Distâncias (Função distancia)**:\n",
     "- **Descrição**: Implementa o algoritmo de Levenstein para calcular a distância mínima necessária para transformar uma sequência noutra, considerando operações de inserção, deleção e substituição.\n",
