--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -1736,7 +1736,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "localhub",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1750,7 +1750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
