--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -1584,7 +1584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Alinhamentos locais e globais"
+    "# Alinhamentos locais e globais"
    ]
   },
   {
@@ -2267,14 +2267,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Blast"
+    "# Blast"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Descrição do Algoritmo (BLAST)\n",
+    "## Descrição do Algoritmo (BLAST)\n",
     "\n",
     "**BLAST (Basic Local Alignment Search Tool)** é um algoritmo amplamente utilizado em bioinformática para encontrar regiões de similaridade local entre sequências biológicas, como DNA, RNA ou proteínas. Ele utiliza uma abordagem heurística para identificar rapidamente os alinhamentos locais mais significativos entre uma sequência de consulta (query) e uma base de dados (database). A natureza heurística do BLAST reduz o tempo de execução ao evitar o alinhamento completo, analisando apenas as subsequências mais promissoras.\n",
     "\n",
@@ -2485,7 +2485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Testes Unitários**"
+    "## Testes Unitários"
    ]
   },
   {
