--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -1166,16 +1166,16 @@
    "source": [
     "## Descrição da Função `get_orfs`\n",
     "\n",
-    "A função `get_orfs` encontra todos os ORFs (Open Reading Frames) a partir de uma sequência de DNA. Ela considera tanto o sentido direto (5' -> 3') quanto o complementar (3' -> 5'), além de analisar os três quadros de leitura possíveis.\n",
+    "A função `get_orfs` encontra todos os ORFs (Open Reading Frames) a partir de uma sequência de DNA. Ela considera tanto o sentido direto (5' -> 3') quanto o complementar (3' -> 5'), além de analisar os três fras de leitura possíveis.\n",
     "\n",
     "## Etapas principais da função `get_orfs`\n",
     "\n",
     "1. **Entrada da sequência de DNA**:\n",
     "   - Recebe uma sequência de DNA representada por uma string de bases (A, T, C, G).\n",
     "\n",
-    "2. **Consideração dos dois sentidos e quadros de leitura**:\n",
+    "2. **Consideração dos dois sentidos e frames de leitura**:\n",
     "   - A função considera tanto o sentido direto da fita (5' -> 3') quanto o complementar (3' -> 5').\n",
-    "   - Para cada sentido, a função analisa os três quadros de leitura possíveis (deslocamento de 0, 1 e 2 bases).\n",
+    "   - Para cada sentido, a função analisa os três frames de leitura possíveis (deslocamento de 0, 1 e 2 bases).\n",
     "\n",
     "3. **Identificação dos ORFs**:\n",
     "   - Para cada quadro de leitura, obtém os codões e verifica se são ORFs válidos (sequências de codões que começam com 'ATG' e terminam com um codão de stop).\n",
@@ -1195,12 +1195,12 @@
     "\n",
     "### 2. **Componentes Principais**:\n",
     "- **Análise do Sentido e Quadro de Leitura**:\n",
-    "  - Considera os dois sentidos da fita (direto e complementar) e os três quadros de leitura.\n",
+    "  - Considera os dois sentidos da fita (direto e complementar) e os três frame de leitura.\n",
     "- **Identificação e Armazenamento dos ORFs**:\n",
     "  - A função encontra os ORFs e os armazena na lista final.\n",
     "\n",
     "### 3. **Fluxo de Dados**:\n",
-    "Entrada da sequência de DNA → Análise dos dois sentidos e quadros de leitura → Identificação e armazenamento dos ORFs → Retorno dos ORFs encontrados.\n",
+    "Entrada da sequência de DNA → Análise dos dois sentidos e frames de leitura → Identificação e armazenamento dos ORFs → Retorno dos ORFs encontrados.\n",
     "\n",
     "---\n",
     "\n",
@@ -1208,14 +1208,14 @@
     "\n",
     "### 1. **Análise do Sentido e Quadro de Leitura**:\n",
     "- **Descrição**:\n",
-    "  - Para cada sentido (direto e complementar), percorre os três quadros de leitura possíveis.\n",
-    "  - Para cada quadro, a sequência é ajustada de acordo com o deslocamento de bases.\n",
+    "  - Para cada sentido (direto e complementar), percorre os três frames de leitura possíveis.\n",
+    "  - Para cada frame, a sequência é ajustada de acordo com o deslocamento de bases.\n",
     "  \n",
     "### 2. **Identificação dos ORFs**:\n",
     "- **Descrição**:\n",
-    "  - Obtém os codões para o quadro de leitura específico e verifica se são ORFs válidos.\n",
+    "  - Obtém os codões para o frame de leitura específico e verifica se são ORFs válidos.\n",
     "- **Algoritmo**:\n",
-    "  - A função `get_codons` é chamada para obter os codões para cada quadro e sentido.\n",
+    "  - A função `get_codons` é chamada para obter os codões para cada frame e sentido.\n",
     "\n",
     "---\n",
     "\n",
@@ -3215,7 +3215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "localhub",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3229,7 +3229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
